--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="gJC5gT8VPn7OLhjK-LP4Vr6BbGZ46MFfcV1nfSMLwEw" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get lookover</title>
     <link rel="stylesheet" href="css/lookover.min.css">
