--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
     </script>
     <!-- End Google Tag Manager -->
     <title>Get lookover</title>
-    <link rel="stylesheet" href="css/getlookover.css">
-    <!-- <link rel="stylesheet" href="https://get-lookover.github.io/CDN/css/lookover.css">  -->
+    <link rel="stylesheet" href="https://get-lookover.github.io/cdn/getlookover-0.0.1/css/getlookover.css">
     <script src="js/jquery.min.js"></script>
-    <script src="js/lookover.js"></script>
-    <!-- <script src="https://get-lookover.github.io/CDN/js/lookover.js"></script> -->
+    <script src="https://get-lookover.github.io/cdn/getlookover-0.0.1/js/lookover.js"></script>
     <style>
         body{
             background-color: #f1f3f4;font-weight: 200;
@@ -305,8 +303,8 @@
 			<p style="color:#3c3c3c; font-weight: 200">You don't need to download Getlookover's folder, just <b>copy</b> the following css and js links in your html.</p>
 			<br>
 			<div class="round code" style="padding: 12px;" id="cdn">
-				<p>&lt;link rel="stylesheet" href="https://get-lookover.github.io/CDN/css/getlookover.css &gt;</p>
-				<p>&lt;link rel="stylesheet" href="https://get-lookover.github.io/CDN/css/getlookover.js &gt;</p>
+				<p>&lt;link rel="stylesheet" href="https://get-lookover.github.io/cdn/getlookover-0.0.1/css/getlookover.css &gt;</p>
+				<p>&lt;link rel="stylesheet" href="https://get-lookover.github.io/cdn/getlookover-0.0.1/css/getlookover.js &gt;</p>
 			</div>
 		</div>
 		
