--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 	<!-- End Google Tag Manager -->
 	<title>Get lookover</title>
 	<!-- <link rel="stylesheet" href="css/getlookover.css"> -->
-	<link rel="stylesheet" href="/get-lookover-0.1/css/get-lookover.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/get-lookover/cdn/get-lookover-0.1/css/get-lookover.min.css">
   	<link rel="stylesheet" href="/css/style.min.css">
 	<script src="js/jquery.min.js"></script>
-	<script src="js/get-lookover.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/get-lookover/cdn/get-lookover-0.1/js/get-lookover.min.js"></script>
 </head>
 
 <body class="col-space-03-em">
