--- a/download/releases.html
+++ b/download/releases.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Get Lookover Releases</title>
-  <link rel="stylesheet" href="../get-lookover-0.1/css/get-lookover.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/get-lookover/cdn/get-lookover-0.1/css/get-lookover.min.css">
   <script src="../js/jquery.min.js"></script>
   <style>
     .releases,header{
