--- a/v01.html
+++ b/v01.html
@@ -1026,7 +1026,7 @@
     if (panel.style.maxHeight) {
       panel.style.maxHeight = null;
     } else {
-      panel.style.maxHeight = panel.scrollHeight + "em";
+      panel.style.maxHeight = panel.scrollHeight + "px";
     } 
     });
   }
