--- a/v01.html
+++ b/v01.html
@@ -1017,7 +1017,10 @@
 <script>
   var acc = document.getElementsByClassName("accordion");
   var i;
-  
+  $(acc).click(function{
+    $(".panel").slideToggle();
+  });
+  /*
   for (i = 0; i < acc.length; i++) {
     acc[i].addEventListener("click", function() {
     this.classList.toggle("active");
@@ -1029,5 +1032,5 @@
       panel.style.maxHeight = panel.scrollHeight + "px";
     } 
     });
-  }
+  }*/
 </script>
