--- a/v01.html
+++ b/v01.html
@@ -1015,9 +1015,9 @@
 
 <script src="js/codecolor.js"></script>
 <script>
-  var acc = document.getElementsByClassName("accordion");
-  var i;
-  $(acc).click(function{
+  /*var acc = document.getElementsByClassName("accordion");
+  var i;*/
+  $(".accordion").click(function{
     $(".panel").slideToggle();
   });
   /*
