--- a/v01.html
+++ b/v01.html
@@ -1014,7 +1014,7 @@
 
 
 <script src="js/codecolor.js"></script>
-<script src="js/jquery.min.js"></script>
+<!--<script src="js/jquery.min.js"></script>-->
 <script>
   var acc = document.getElementsByClassName("accordion");
   var i;
