--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<!-- <link rel="stylesheet" href="css/getlookover.css"> -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/get-lookover/cdn/get-lookover-0.1/css/get-lookover.min.css">
   	<link rel="stylesheet" href="/css/style.min.css">
-	<script src="js/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/gh/get-lookover/cdn/get-lookover-0.1/js/get-lookover.min.js"></script>
 </head>
 
