--- a/v01.html
+++ b/v01.html
@@ -1,7 +1,7 @@
 
 <div class="starter padding-24 margin-16">
   <h1>Get Lookover<sub style="font-size: small;">v0.1</sub></h1>
-  <a href="https://get-lookover.github.io/download/releases.html" class="btn btn-primary">Go To download Page<span class="material-symbols">chevron_right</span></a>
+  <a href="https://get-lookover.github.io/download/" class="btn btn-primary">Go To download Page<span class="material-symbols">chevron_right</span></a>
 </div>
 
 <div class="note padding-24 margin-bottom-16 color-light-bg">
